--- a/.github/workflows/pypi_ci.yml
+++ b/.github/workflows/pypi_ci.yml
@@ -3,10 +3,10 @@ name: Python Package CI/CD
 on:
   push:
     branches:
-      - main  # This will trigger the workflow on any push to the "main" branch
+      - main  # Trigger the workflow on any push to the "main" branch
   pull_request:
     branches:
-      - main  # It will also trigger on pull requests to the "main" branch
+      - main  # Trigger on pull requests to the "main" branch
 
 jobs:
   build:
@@ -25,15 +25,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-        pip install -r requirements.txt  # If you have a requirements file
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi  # Install only if requirements.txt exists
 
     - name: Build package
       run: |
-        python setup.py sdist bdist_wheel
+        rm -rf dist/  # Clean up old builds
+        python setup.py sdist bdist_wheel  # Build package
 
     - name: Upload package to PyPI
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
-        twine upload dist/* --skip-existing
+        twine upload dist/* --skip-existing  # Upload package to PyPI
