--- a/.github/workflows/pypi_ci.yml
+++ b/.github/workflows/pypi_ci.yml
@@ -3,10 +3,10 @@ name: Python Package CI/CD
 on:
   push:
     branches:
-      - main  # Trigger the workflow on any push to the "main" branch
+      - main
   pull_request:
     branches:
-      - main  # Trigger on pull requests to the "main" branch
+      - main
 
 jobs:
   build:
@@ -24,17 +24,23 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi  # Install only if requirements.txt exists
+        pip install setuptools wheel twine bump2version
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Bump version
+      run: |
+        bump2version patch  # Can be 'patch', 'minor', or 'major'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build package
       run: |
-        rm -rf dist/  # Clean up old builds
-        python setup.py sdist bdist_wheel  # Build package
+        rm -rf dist/
+        python setup.py sdist bdist_wheel
 
     - name: Upload package to PyPI
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
-        twine upload dist/* --skip-existing  # Upload package to PyPI
+        twine upload dist/* --skip-existing
