--- a/.github/workflows/pypi_ci.yml
+++ b/.github/workflows/pypi_ci.yml
@@ -25,11 +25,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine bump2version
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Set Git identity for version bump
+      run: |
+        git config --local user.name "onurcangnc"
+        git config --local user.email "onurcan.genc@ug.bilkent.edu.tr"
 
     - name: Bump version
       run: |
-        bump2version patch  # Can be 'patch', 'minor', or 'major'
+        bump2version patch  # or 'minor' or 'major'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
