--- a/.github/workflows/pypi_ci.yml
+++ b/.github/workflows/pypi_ci.yml
@@ -47,4 +47,4 @@ jobs:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
-        twine upload dist/* --skip-existing
+        twine upload dist/*
